# mostly

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml
docs/: mf.ipynb
src/mostly/: linguistic_variable.py
src/mostly/fuzzy_rules/: fuzzy_rule.py  logical_operators.py
src/mostly/inference/: mamdani.py
src/mostly/membership_functions/: __init__.py  bimodal_gaussian.py  gaussian.py  generalized_bell.py  trapezoidal.py  triangle.py
src/mostly/membership_funs/: __init__.py  base.py  bimodal_gaussian.py  gaussian.py  generalized_bell.py  trapezoid.py  triangle.py
src/mostly/plotting/: plot_fis_inputs.py  plot_linguistic_variable.py
src/mostly/plotting/altair/: __init__.py  plot_fis_inputs.py  plot_fis_outputs.py  plot_fuzzy_set.py  plot_linguistic_variable.py  themes.py
tests/: conftest.py
tests/unit/fuzzy_rules/: test_fuzzy_rule.py
tests/unit/inference/: test_mamdani.py
tests/unit/membership_funs/: test_base.py  test_bimodal_gaussian.py  test_failing_calls.py  test_gaussian.py  test_generalized_bell.py  test_linguistic_variable.py  test_trapezoid.py  test_triangle.py
