[project]
name = "mostly"
version = "0.1.0"
description = "A lightweight library for building fuzzy inference systems."
authors = [
    { name = "Moritz", email = "cupressus@posteo.de" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
